# Crawling-Automation

./: .cursorrules  README.md
Naver_RealEstate_Crawling/: step.ipynb
paper_automation/: README.md  gui.py  pyproject.toml  run.py
paper_automation/config/: config.json
paper_automation/docs/: CLAUDE.md  README.md  strategy.md
paper_automation/results/: papers_20250815_173235.xlsx  papers_20250815_173744.xlsx  papers_20250815_174135.xlsx  papers_20250815_175017.xlsx  papers_20250815_175145.xlsx  papers_20250815_175744.xlsx  papers_20250815_180545.xlsx  papers_20250815_181719.xlsx  report_20250815_174136.xlsx  report_20250815_175017.xlsx  report_20250815_175145.xlsx  report_20250815_175744.xlsx  report_20250815_180545.xlsx
paper_automation/results/session_20250815_160440/: papers_20250815_160454.json
paper_automation/results/session_20250815_172214/: papers_20250815_172228.json
paper_automation/results/session_20250815_173229/: papers_20250815_173235.json
paper_automation/results/session_20250815_173419/: papers_20250815_173424.json
paper_automation/results/session_20250815_173558/: papers_20250815_173602.json
paper_automation/results/session_20250815_173740/: papers_20250815_173744.json
paper_automation/results/session_20250815_174124/: papers_20250815_174135.json
paper_automation/results/session_20250815_175008/: papers_20250815_175017.json
paper_automation/results/session_20250815_175132/: papers_20250815_175145.json
paper_automation/src/: __init__.py  backend.py  exporter.py  extractor.py  scraper.py  storage.py  summarizer.py
(+34 files in other folders)
